# rainbow

./: .clang_complete  .codecov.yml  .doozer.json  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .hgignore  .lgtm.yml  .prettierignore  .travis.yml  Brewfile  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  Rainbow.sublime-project  THIRDPARTY  appveyor.yml  bitbucket-pipelines.yml  codecov.yml  makefile  mkdocs.yml  package.json  tsconfig.tools.json
.github/: dependabot.yml
.github/workflows/: main.yml
demos/audio/: main.lua
demos/blow/: main.lua
demos/box2d/: main.lua
demos/canvas/: main.lua
demos/coroutines/: main.lua
demos/fmod/: main.lua  main_lowlevel.lua  main_studio.lua
demos/labels/: main.lua
demos/lights/: main.lua
demos/monkey/: config  intro.lua  intro.prose.lua  main.lua  scummbar.kvad.lua  scummbar.lua  scummbar.prose.lua  threepwood.lua
demos/nim/: main.nim
demos/recorder/: main.lua
demos/shake/: main.lua
demos/spine/: main.lua
demos/splines/: main.lua
demos/timers/: main.lua
demos/transitions/: Kim.lua  main.lua
doc/: Doxyfile  api.md  docusaurus.config.js  index.html  index.md  introduction.md  license.md  package.json  quickstart.md  rainbow.js  rainbow.json  sidebars.js  sidebars.json  siteConfig.js  style.css
doc/content/: audio.md  basics.md  coding-standard.md  getting-started.md  input.md  math.md  sprite-sheet-animations.md  timers.md  transitions.md
doc/contributing/: coding_standard.md
doc/core/: Footer.js
doc/css/: bootstrap.min.css  main.css  monokai_sublime.css
doc/docs/: audio.mdx  basics.mdx  coding-standard.mdx  getting-started.mdx  input.md  math.md  sprite-sheet-animations.mdx  timers.md  transitions.md
doc/getting_started/: cpp_basics.md  lua_basics.md  quick_start.md
doc/includes/: audio.md  basics.md  building_rainbow_for_mobile.md  building_rainbow_for_pc.md  coding_standard.md  getting_started.md  input.md  license.md  lua_api.md  math.md  quick_start.md  sprite_sheet_animations.md  timers.md  transitions.md
doc/js/: highlight.pack.js  main.js
doc/lua/: api.md
docs/content/: basics.md  coding-standard.md  getting-started.md
docs/static/: index.html
dotnet/Rainbow/: GlobalSuppressions.cs  Program.CodeGen.cs  Program.Runtime.cs  Rainbow.csproj  Vector2.cs  stylecop.json
include/: Rainbow.hpp
include/Rainbow/: AnimationEvent.h  TextAlignment.h
js/: 01 Sound Compilation Phong Nha National Park.m4a  LICENSE  index.bundle.js  index.bundle.js.map  index.bundle.ts  index.d.ts  index.js  index.js.map  index.ts  rainbow-config.schema.json  rainbow-scene.schema.json  tsconfig.json
lib/Box2D/: RainbowDraw.cpp  RainbowDraw.h
lib/GL/: GLee.c  GLee.h
lib/Lua/: LICENSE  llex.c  lmathlib.c  loslib.c  luaconf.h
lib/boost/: assert.hpp  config.hpp
lib/dSFMT/: dSFMT-Xcode.mm
lib/glad/: glad.c  glad.h
lib/libpng/: config.h  libpng.c  pnglibconf.h
libs/: Box2D.mk  Rainbow.mk
libs/Rainbow/: Algorithm.h  Animation.h  ArsMathematica.h  AssetManager.cpp  AssetManager.h  Director.cpp  Director.h  Drawable.h  Element.h  Font.cpp  Font.h  FontAtlas.cpp  FontAtlas.h  FontGlyph.h  Label.h  Lua.cpp  Lua.h  OpenGL.h  Physics.cpp  Physics.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Touchable.h  Types.h  Vector.h
libs/freetype/: install.sh
lua/: Accelerometer.lua  AnimationController.lua  Coroutine.lua  Functional.lua  Input.lua  Math.lua  Parallax.lua  Path.lua  Prose.lua  Scheduler.lua  Stack.lua  Strict.lua  Timer.lua  Transition.lua  TransitionEffects.lua  TransitionFunctions.lua  Utils.lua
lua/Prose/: Parser.lua  Prose.lua  init.lua
lua/Splines/: Catmull-Rom.lua
res/Fonts/: ArialBlack.fnt  ArialBold.fnt
src/: .clang-format  .clang-tidy  .ycm_extra_conf.py  Algorithm.h  Animation.h  AssetManager.cpp  AssetManager.h  Assets.h  Building.cpp  Building.h  Config.cpp  Config.h  Controls.cpp  Controls.h  Director.cpp  Director.h  Drawable.h  FontAtlas.cpp  FontAtlas.h  FontGlyph.h  GLES-Render.h  GLES-Render.mm  HUD.cpp  HUD.h  Label.h  Lua.cpp  Lua.h  LuaMachine.cpp  LuaMachine.h  Master.cpp  Master.h  OnWireAndroid.cpp  OnWireAppDelegate.h  OnWireAppDelegate.mm  OnWireGame.cpp  OnWireGame.h  OnWireSDL.cpp  OnWireScene.h  OnWireScene.mm  OnWireState.h  (+19 more)
src/Applications/: Canvas.cpp  Canvas.h  lua_Canvas.cpp  lua_Canvas.h
src/Audio/: AudioFile.cpp  AudioFile.h  DummyMixer.h  Mixer.h
src/Collision/: SAT.cpp  SAT.h
src/Common/: Algorithm.h  Arena.h  Assert.h  Attributes.h  Callback.h  Chrono.cpp  Chrono.h  ChronoTrigger.cpp  ChronoTrigger.h  Color.h  Constants.h  Constraints.h  Data.cpp  Data.h  DataMap.h  Debug.h  Defer.h  Error.cpp  Error.h  Finally.h  Functional.h  Geometry.h  Global.h  IO.cpp  IO.h  Intrinsics.h  Link.cpp  Link.h  List.h  Logging.h  Memory.h  NonCopyable.h  Passkey.h  RainbowAssert.h  Random.cpp  Random.h  RawPtr.h  ScopeStack.h  SharedPtr.h  ShutdownSequence.h  (+16 more)
src/ConFuoco/: AudioFile.cpp  AudioFile.h  Channel.cpp  Channel.h  Decoder.h  Mixer.cpp  Mixer.h  OpenAL.h  Recorder.cpp  Recorder.h  Sound.h  Stream.h  Wave.cpp  Wave.h  WaveBank.cpp  WaveBank.h
src/DotNet/: Core.cpp  Core.h  CoreCLR.cpp  CoreCLR.h  CoreScript.cpp  CoreScript.h  Error.h  SharedLibrary.cpp  SharedLibrary.h  TerminateOnReturn.h
src/Elements/: Bird.cpp  Bird.h  Wind.cpp  Wind.h
tests/: Acceleration.test  Algorithm.test  Algorithm.test.cpp  Makefile  test.h
tools/: afconvert.sh  build-analyze.sh  build-android.sh  build-ci.sh  build-docs.sh  build-mac.sh  build-nim.sh  build-windows.bat  build.bat  build.sh  fmod-import-tool.sh  generate-bindings.js  generate-bindings.ts  generate-shaders.js  generate-shaders.ts  genkeys.lua  harfbuzz-disable-tests.patch  harfbuzz-fix-iOS-build.patch  import-asset.js  import-asset.ts  libfreetype.sh  libglee.sh  libpng-upgrade-tool.sh  libpng.sh  lua_keys.lua  make-solution.bat  make.ps1  newyear.sh  rez.py  shaders-gen.py  slate-collapse-right-column.patch  sublime-completions.py  travis.sh  update-glext.h.sh  valgrind.supp  xcode-prebuild.sh
(+782 files in other folders)
